fixed background image issue for homepage on mobile view

--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -1,10 +1,10 @@
 .background {
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.824), rgba(0, 0, 0, 0.523)), url(../../images/particles.jpeg);
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.824), rgba(0, 0, 0, 0.523)), url(../../images/particles.jpeg);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
   background-size: cover;
-  height: 100vh;
 }
 
 .my-name {
